# tapmap

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  app_dirs.py  compose.linux.yaml  config.py  mkdocs.yaml  pyproject.toml  requirements-docs.txt  requirements.txt  runtime.py  tapmap.py  tapmap.spec  test.py  version.py
.github/workflows/: build-test.yaml  docs.yaml  release.yaml  sync-upstream.yaml
assets/: keys.js  styles.css
docker-data/: README.txt
docs/: backend-testing.md  index.md
docs/dev/: repository-setup.md
model/: __init__.py  geoinfo.py  hostname_cache.py  maxmind_updater.py  model.py  netinfo.py  netinfo_linux.py  netinfo_lsof.py  netinfo_namespaces.py  netinfo_psutil.py  netinfo_windows.py  node_client.py  node_server.py  public_ip.py
state/: __init__.py  keyboard.py  menu.py  modal.py  open_ports_prefs.py  poll.py  status_cache.py  status_line.py
tests/: test_app_dirs.py  test_cache_view.py  test_hostname_cache.py  test_keyboard.py  test_maxmind_updater.py  test_menu.py  test_modal.py  test_netinfo_linux.py  test_netinfo_namespaces.py  test_node_client.py  test_node_server.py  test_open_ports_prefs.py  test_poll.py  test_smoke.py  test_status_cache.py  test_status_line.py
tools/: build.py  build_docs.py  clean.ps1  mkdocsreq.ps1  mkreq.ps1
ui/: __init__.py  about_view.py  cache_view.py  formatting.py  help_text.py  help_view.py  layout_view.py  map_ui.py  map_view.py  modal_tables.py  modal_text.py  modal_view.py  status_cache.py  tables.py
